Closed Bug 210539 Opened 23 years ago Closed 23 years ago

mFd is not initialized in nsJAR [@ PR_Close]

Categories

(Core :: Networking, defect)

x86
Windows 2000
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: timeless, Assigned: timeless)

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

xpcshell Components.classes["@mozilla.org/libjar/zip-reader;1"].createInstance();gc(); PR_Close(PRFileDesc * 0xcdcdcdcd) line 133 + 7 bytes nsJAR::Close(nsJAR * const 0x00fbcf50) line 232 + 16 bytes nsJAR::~nsJAR() line 162
Status: NEW → ASSIGNED
Summary: mFD is not initialized in nsJAR [@ PR_Close] → mFd is not initialized in nsJAR [@ PR_Close]
Attached patch fixSplinter Review
Attachment #126388 - Flags: superreview?(alecf)
Attachment #126388 - Flags: review?(alecf)
Comment on attachment 126388 [details] [diff] [review] fix ouch! r/sr=alecf
Attachment #126388 - Flags: superreview?(alecf)
Attachment #126388 - Flags: superreview+
Attachment #126388 - Flags: review?(alecf)
Attachment #126388 - Flags: review+
checked in
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Crash Signature: [@ PR_Close]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: