Bug 210539 mFd is not initialized in nsJAR [@ PR_Close] r=alecf sr=alecf